# Audentify

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260622_2240-4f1dd4d76894_initial_schema.py
app/: __init__.py  config.py  domain.py  main.py
app/cache/: __init__.py  store.py
app/clients/: __init__.py  acoustid.py  http.py  musicbrainz.py  spotify.py
app/db/: models.py  session.py
app/pipeline/: interfaces.py
app/pipeline/stage1_identity/: __init__.py  fingerprint.py  manual.py  spotify.py  work_resolver.py
app/pipeline/stage2_gaps/: __init__.py  ascap.py  base_adapter.py  bmi.py  matching.py  mlc.py  soundexchange.py
app/pipeline/stage3_estimate/: __init__.py  calculator.py
app/rates/: __init__.py  loader.py  rates.yaml
app/schemas/: __init__.py  audit.py  estimate.py  gaps.py  identity.py
app/services/: audit.py
docs/: orchestration_plan.md
streamlit_app/: app.py
tests/: conftest.py  factories.py  test_e2e.py  test_matching.py  test_models.py  test_stage1.py  test_stage2.py  test_stage3.py
tests/fixtures/: acoustid_lookup.json  ascap_repertory_search.html  bmi_repertoire_search.json  mlc_work_search.json  musicbrainz_no_work_relation.json  musicbrainz_work_relations.json  spotify_track.json
