[project]
name = "audentify"
version = "0.1.0"
description = "Leak-audit tool that surfaces royalties indie artists are unknowingly losing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0",
]

# Stage-specific deps are extras so the core install stays light (and Phase 0 doesn't
# pull in the fpcalc/playwright/streamlit weight before it's needed).
[project.optional-dependencies]
stage1 = ["spotipy>=2.23", "musicbrainzngs>=0.7.1", "pyacoustid>=1.3.0"]
stage2 = ["httpx>=0.27", "beautifulsoup4>=4.12", "rapidfuzz>=3.9", "playwright>=1.44"]
ui = ["streamlit>=1.35"]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
